# lexie

./: .ocamlformat  README.md  dune-project  lexie.opam
lib/: dune
lib/Batteries/: Batteries.ml  Char.ml  Char.mli  Fun.ml  Fun.mli  Int.ml  Int.mli  Intp.ml  Intp.mli  List.ml  List.mli  Operators.ml  Operators.mli  Option.ml  Option.mli  Painter.ml  String.ml  String.mli  dune
lib/CLI/: Check.ml  Check.mli  Config.ml  Config.mli  Hook.ml  Hook.mli  Main.ml  Main.mli  Run.ml  Run.mli  Sample.ml  dune
lib/Clinic/: Category.ml  Category.mli  Diagnosis.ml  Diagnosis.mli  Diagnostic.ml  Diagnostic.mli  Doctor.ml  Doctor.mli  dune
lib/Compiler/: dune
lib/Compiler/AIL/: AIL.ml  Lang.ml  Parameter.ml  Program.ml  Statement.ml  Task.ml  Task.mli  Term.ml  dune
lib/Compiler/Analysis/: Analysis.ml  Analysis.mli  Core.ml  Core.mli  Diagnosis.ml  Kind.mli  Lang.ml  Program.mli  Sort.ml  Sort.mli  Statement.ml  dune
lib/Compiler/Common/: Primitive.ml  Primitive.mli  dune
lib/Compiler/Diagnostic/: Category.ml  Diagnostic.ml  dune
lib/Compiler/Nurse/: Nurse.ml  Nurse.mli  dune
lib/Compiler/TAIL/: Kind.ml  Lang.ml  Parameter.mli  Program.mli  (+4 more)
lib/Config/: Config.ml  Config.mli  dune
lib/Custom/: Name.ml  Name.mli  Painter.ml  Quickmap.ml  Syntactic_kind.ml  Syntactic_kind.mli  dune
lib/Hooks/: Check.ml  Check.mli  Config.ml  Config.mli  Eval.ml  Eval.mli  Hook.ml  Run.ml  Run.mli  dune
lib/Noyau/: Noyau.ml  dune
lib/Runtime/: Core.ml  Core.mli  Exception.ml  Exception.mli  Object.ml  Object.mli  Outcome.ml  Unreachable.ml  Unreachable.mli  dune
test/: dune
